--- a/templates/list.html
+++ b/templates/list.html
@@ -19,7 +19,7 @@
         </button>
       </nav>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/index">Home</a></li>
+        <li class="breadcrumb-item"><a href="/">Home</a></li>
         <li class="breadcrumb-item active">List</li>
       </ol>
       <div class="row">
