--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -33,7 +33,7 @@
         </button>
       </nav>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/index">Home</a></li>
+        <li class="breadcrumb-item"><a href="/">Home</a></li>
         <li class="breadcrumb-item"><a href="/list">List</a></li>
         <li class="breadcrumb-item active">{{ recipe['name'] }}</li>
       </ol>
