--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='manifest.json') }}">
