--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -10,13 +10,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="manifest" href="manifest.json">
     <!-- ios support -->
-    <link rel="apple-touch-icon" href="images/icons/icon-72x72.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-96x96.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-128x128.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-144x144.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-192x192.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-384x384.png">
     <link rel="apple-touch-icon" href="images/icons/icon-512x512.png">
     <meta name="apple-mobile-web-app-status-bar" content="#db4938">
     <meta name="theme-color" content="#db4938">
@@ -108,10 +101,27 @@
           </div>
         </div>
         <div class="tab-pane fade" id="equipment">
-          <div class="col-lg-5">
+          <div class="col-lg-4">
+            <h5 class="mt-2">Standard</h5>
             <ul class="list-group">
-                {% if recipe['equipment'] %}
-                  {% for item in recipe['equipment'] %}  
+                {% if recipe['equipment_standard'] %}
+                  {% for item in recipe['equipment_standard'] %}  
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      <span class="flex-grow-1">{{item}}</span>
+                    </li>
+                  {% endfor %}
+                {% else %}
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <span class="flex-grow-1"><i>None</i></span>
+                  </li>
+                {% endif %}
+              </ul>
+          </div>
+          <div class="col-lg-4">
+            <h5 class="mt-2">More Specialised</h5>
+            <ul class="list-group">
+                {% if recipe['equipment_special'] %}
+                  {% for item in recipe['equipment_special'] %}  
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       <span class="flex-grow-1">{{item}}</span>
                     </li>
