--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -31,18 +31,18 @@
         <li class="breadcrumb-item active">{{ recipe['name'] }}</li>
       </ol>
       <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a class="nav-link active" data-toggle="tab" href="#ingredients">Ingredients</a>
+        <li class="nav-item mr-1">
+          <a class="nav-link" data-toggle="tab" href="#ingredients">Ingredients</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mr-1">
           <a class="nav-link" data-toggle="tab" href="#equipment">Equipment</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#method">Method</a>
+        <li class="nav-item mr-1">
+          <a class="nav-link active" data-toggle="tab" href="#method">Method</a>
         </li>
       </ul>
       <div id="myTabContent" class="tab-content">
-        <div class="tab-pane fade active show" id="ingredients">
+        <div class="tab-pane fade" id="ingredients">
           <div class="row">
             <div class="col-lg-4">
               <ul class="list-group">
@@ -100,7 +100,7 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade" id="equipment">
+        <div class="tab-pane fade " id="equipment">
           <div class="col-lg-4">
             <h5 class="mt-2">Standard</h5>
             <ul class="list-group">
@@ -134,7 +134,7 @@
               </ul>
           </div>
         </div>
-        <div class="tab-pane fade" id="method">
+        <div class="tab-pane fade active show" id="method">
           <div class="col-lg-12">
             <div style="width:100%;max-width:600px;margin-left:auto;margin-right:auto;">
               {% block chart_svg %}{% endblock %}
