--- a/jol_recipes/templates/recipe.html
+++ b/jol_recipes/templates/recipe.html
@@ -17,7 +17,12 @@
     <div class="jumbotron py-4">
       <h2>{{ recipe['name'] }}</h2>
       <p class="lead">{{ recipe['description'] }}</p>
-      <p class="muted"><em>{{ recipe['serving_tag'] }}</em></p>
+      <p class="mb-0">
+        <button type="button" class="mr-2 btn btn-outline-primary btn-sm" data-toggle="modal" data-target="#scalingModal">
+          Adjust Qty
+        </button><span></span>
+        <em id="heading_quantity" data_qty={{ recipe['serving_qty'] }}>Quantity shown {{ recipe['serving_tag'] }} {{ recipe['serving_qty'] }} {{ recipe['serving_unit'] }}.</em>
+      </p>
     </div>
     <ul class="nav nav-tabs">
       <li class="nav-item mr-1">
@@ -33,7 +38,7 @@
     <div id="myTabContent" class="tab-content">
       <div class="tab-pane fade active show" id="ingredients">
         <div class="row">
-          <div class="col-lg-5 col-md-6 mb-2">
+          <div class="col-lg-5 col-md-6 mt-2">
             <ul class="list-group">
               <h5 class="mt-2">Meat & Vegetables</h5>
               {% if recipe['ingredients_meat_veg'] %}
@@ -41,7 +46,7 @@
                   <li class="list-group-item d-flex justify-content-between align-items-center">
                     <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
                     <span class="flex-grow-1">{{ingredient['name']}}</span>
-                    <em text-muted>{{ingredient['quantity']}}</em>
+                    <em text-muted data_role='list_ingredient_qty' id="list_mv_qty_{{loop.index}}" data_qty='{{ingredient['quantity']}}' data_unit='{{ingredient['unit']}}'>{{ingredient['quantity']}}{{ingredient['unit']}}</em>
                   </li>
                 {% endfor %}
               {% else %}
@@ -51,7 +56,7 @@
               {% endif %}
             </ul>
           </div>
-          <div class="col-lg-5 col-md-6 mb-2">
+          <div class="col-lg-5 col-md-6 mt-2">
             <ul class="list-group">
               <h5 class="mt-2">Herbs and Spices</h5>
               {% if recipe['ingredients_herbs_spices'] %}
@@ -59,7 +64,7 @@
                   <li class="list-group-item d-flex justify-content-between align-items-center">
                     <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
                     <span class="flex-grow-1">{{ingredient['name']}}</span>
-                    <em text-muted>{{ingredient['quantity']}}</em>
+                    <em text-muted data_role='list_ingredient_qty' id="list_hs_qty_{{loop.index}}" data_qty='{{ingredient['quantity']}}' data_unit='{{ingredient['unit']}}'>{{ingredient['quantity']}}{{ingredient['unit']}}</em>
                   </li>
                 {% endfor %}
               {% else %}
@@ -69,7 +74,7 @@
               {% endif %}
             </ul>
           </div>
-          <div class="col-lg-5 col-md-6 mb-2">
+          <div class="col-lg-5 col-md-6 mt-2">
             <ul class="list-group">
               <h5 class="mt-2">Pantry</h5>
               {% if recipe['ingredients_pantry'] %}
@@ -77,7 +82,7 @@
                   <li class="list-group-item d-flex justify-content-between align-items-center">
                     <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
                     <span class="flex-grow-1">{{ingredient['name']}}</span>
-                    <em text-muted>{{ingredient['quantity']}}</em>
+                    <em text-muted data_role='list_ingredient_qty' id="list_p_qty_{{loop.index}}" data_qty='{{ingredient['quantity']}}' data_unit='{{ingredient['unit']}}'>{{ingredient['quantity']}}{{ingredient['unit']}}</em>
                   </li>
                 {% endfor %}
               {% else %}
@@ -87,7 +92,7 @@
               {% endif %}
             </ul>
           </div>
-          <div class="col-lg-5 col-md-6 mb-2">
+          <div class="col-lg-5 col-md-6 mt-2">
             <ul class="list-group">
               <h5 class="mt-2">Fridge and Freezer</h5>
               {% if recipe['ingredients_fridge_freezer'] %}
@@ -95,7 +100,7 @@
                   <li class="list-group-item d-flex justify-content-between align-items-center">
                     <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
                     <span class="flex-grow-1">{{ingredient['name']}}</span>
-                    <em text-muted>{{ingredient['quantity']}}</em>
+                    <em text-muted data_role='list_ingredient_qty' id="list_ff_qty_{{loop.index}}" data_qty='{{ingredient['quantity']}}' data_unit='{{ingredient['unit']}}'>{{ingredient['quantity']}}{{ingredient['unit']}}</em>
                   </li>
                 {% endfor %}
               {% else %}
@@ -109,7 +114,7 @@
       </div>
       <div class="tab-pane fade" id="equipment">
         <div class="row">
-          <div class="col-lg-4 col-md-6 mb-2">
+          <div class="col-lg-4 col-md-6 mt-2">
             <h5 class="mt-2">Standard</h5>
             <ul class="list-group">
                 {% if recipe['equipment_standard'] %}
@@ -125,7 +130,7 @@
                 {% endif %}
               </ul>
           </div>
-          <div class="col-lg-4 col-md-6 mb-2">
+          <div class="col-lg-4 col-md-6 mt-2">
             <h5 class="mt-2">More Specialised</h5>
             <ul class="list-group">
                 {% if recipe['equipment_special'] %}
@@ -152,6 +157,33 @@
       </div>
     </div>
   </div>
+  <br class="mb-4">
+
+  <!-- Scaling Modal -->
+  <div class="modal fade" id="scalingModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Adjust Recipe Quantity</h5>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="exampleInputPassword1">Update to:</label>
+            <div class="input-group">
+              <input data_qty="{{ recipe['serving_qty'] }}" id="updatedScaleFactor" type="numeric" class="form-control" value="{{ recipe['serving_qty'] }}">
+              <div class="input-group-append">
+                <span class="input-group-text">{{ recipe['serving_unit'] }}</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary">Cancel</button>
+          <button type="button" onclick="updatescaling()" class="btn btn-primary" data-dismiss="modal">Apply</button>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock content %}
 
 {% block scripts %}
@@ -167,6 +199,50 @@
       }
     
     }
+
+    function updatescaling() {
+      var serving_tag = '{{ recipe['serving_tag'] }}';
+      var serving_qty = '{{ recipe['serving_qty'] }}';
+      var serving_unit = '{{ recipe['serving_unit'] }}';
+      //Quantity shown  {{ recipe['serving_qty'] }} {{ recipe['serving_unit'] }}.
+      
+      elt = document.getElementById('updatedScaleFactor');
+      new_qty = elt.value;
+      base_qty = elt.getAttribute('data_qty');
+      var factor = new_qty/base_qty;
+
+      elts = document.querySelectorAll("[data_role='chart_ingredient_qty']");
+      var arrayLength = elts.length;
+      for (var i = 0; i < arrayLength; i++) {
+          var base_qty = (elts[i].getAttribute('data_qty'));
+          if (base_qty) {
+            var updated_qty = base_qty * factor;
+          } else {
+            var updated_qty = '';
+          };
+          var current_unit = elts[i].getAttribute('data_unit');
+          document.getElementById(elts[i].id).innerHTML = updated_qty + current_unit;
+      }
+
+      element = document.getElementById('heading_quantity')
+      element_qty = element.getAttribute('data_qty')
+      element.innerHTML = 'Quantity shown {{ recipe['serving_tag'] }} ' + element_qty * factor + ' {{ recipe['serving_unit'] }}.';
+
+      elts = document.querySelectorAll("[data_role='list_ingredient_qty']");
+      var arrayLength = elts.length;
+      for (var i = 0; i < arrayLength; i++) {
+          var base_qty = (elts[i].getAttribute('data_qty'));
+          if (base_qty) {
+            var updated_qty = base_qty * factor;
+          } else {
+            var updated_qty = '';
+          };
+          var current_unit = elts[i].getAttribute('data_unit');
+          document.getElementById(elts[i].id).innerHTML = updated_qty + ' ' + current_unit;
+      }
+
+    }
   </script>
+
 {% endblock scripts %}
    
