--- a/jol_recipes/templates/base.html
+++ b/jol_recipes/templates/base.html
@@ -30,7 +30,7 @@
       {% endblock content %}
     </div>
 
-    <script src="{{ url_for('static', filename='js/jquery-3.5.1.slim.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     
     {% block scripts %}
