--- a/jol_recipes/templates/list.html
+++ b/jol_recipes/templates/list.html
@@ -4,9 +4,16 @@
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <a class="navbar-brand" href="/index.html">JOL Recipe Book</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/list">List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/conversion">Unit Conversion</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="/">Home</a></li>
@@ -47,12 +54,10 @@
 {% block scripts %}
   <script>
     $(document).ready(function() {
-        $("#cardFilter").on("change", function() {
-            var value = $(this).val().toLowerCase();
-            $('div[data-role="recipe"]').filter(function() {
-                $(this).toggle($(this).find('h4').text().toLowerCase().indexOf(value) > -1)
-            });
-        });
+      $.get( "/api/getList", function( data ) {
+        console.log( typeof data ); // string
+        console.log( data ); // HTML content of the jQuery.ajax page
+      });
     });
   </script>
 {% endblock scripts %}
