--- a/jol_recipes/templates/recipe.html
+++ b/jol_recipes/templates/recipe.html
@@ -4,10 +4,17 @@
 {% block content %}
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="/index.html">JOL Recipe Book</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <a class="navbar-brand" href="/">JOL Recipe Book</a>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/list">List</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/conversion">Unit Conversion</a>
+            </li>
+          </ul>
+        </div>
     </nav>
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="/">Home</a></li>
@@ -46,7 +53,7 @@
                   <li class="list-group-item d-flex justify-content-between align-items-center">
                     <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
                     <span class="flex-grow-1">{{ingredient['name']}}</span>
-                    <em text-muted data_role='list_ingredient_qty' id="list_mv_qty_{{loop.index}}" data_qty='{{ingredient['quantity']}}' data_unit='{{ingredient['unit']}}'>{{ingredient['quantity']}}{{ingredient['unit']}}</em>
+                    <em text-muted data_role='list_ingredient_qty' id="list_mv_qty_{{loop.index}}" data_qty='{{ingredient['quantity']}}' data_unit='{{ingredient['unit']}}'>{{ingredient['quantity']}} {{ingredient['unit']}}</em>
                   </li>
                 {% endfor %}
               {% else %}
@@ -64,7 +71,7 @@
                   <li class="list-group-item d-flex justify-content-between align-items-center">
                     <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
                     <span class="flex-grow-1">{{ingredient['name']}}</span>
-                    <em text-muted data_role='list_ingredient_qty' id="list_hs_qty_{{loop.index}}" data_qty='{{ingredient['quantity']}}' data_unit='{{ingredient['unit']}}'>{{ingredient['quantity']}}{{ingredient['unit']}}</em>
+                    <em text-muted data_role='list_ingredient_qty' id="list_hs_qty_{{loop.index}}" data_qty='{{ingredient['quantity']}}' data_unit='{{ingredient['unit']}}'>{{ingredient['quantity']}} {{ingredient['unit']}}</em>
                   </li>
                 {% endfor %}
               {% else %}
@@ -82,7 +89,7 @@
                   <li class="list-group-item d-flex justify-content-between align-items-center">
                     <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
                     <span class="flex-grow-1">{{ingredient['name']}}</span>
-                    <em text-muted data_role='list_ingredient_qty' id="list_p_qty_{{loop.index}}" data_qty='{{ingredient['quantity']}}' data_unit='{{ingredient['unit']}}'>{{ingredient['quantity']}}{{ingredient['unit']}}</em>
+                    <em text-muted data_role='list_ingredient_qty' id="list_p_qty_{{loop.index}}" data_qty='{{ingredient['quantity']}}' data_unit='{{ingredient['unit']}}'>{{ingredient['quantity']}} {{ingredient['unit']}}</em>
                   </li>
                 {% endfor %}
               {% else %}
@@ -100,7 +107,7 @@
                   <li class="list-group-item d-flex justify-content-between align-items-center">
                     <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
                     <span class="flex-grow-1">{{ingredient['name']}}</span>
-                    <em text-muted data_role='list_ingredient_qty' id="list_ff_qty_{{loop.index}}" data_qty='{{ingredient['quantity']}}' data_unit='{{ingredient['unit']}}'>{{ingredient['quantity']}}{{ingredient['unit']}}</em>
+                    <em text-muted data_role='list_ingredient_qty' id="list_ff_qty_{{loop.index}}" data_qty='{{ingredient['quantity']}}' data_unit='{{ingredient['unit']}}'>{{ingredient['quantity']}} {{ingredient['unit']}}</em>
                   </li>
                 {% endfor %}
               {% else %}
