--- a/jol_recipes/templates/recipe.html
+++ b/jol_recipes/templates/recipe.html
@@ -185,8 +185,8 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button type="button" onclick="updatescaling()" class="btn btn-primary">Apply</button>
+          <button type="button" class="btn btn-secondary">Cancel</button>
+          <button type="button" onclick="updatescaling()" class="btn btn-primary" data-dismiss="modal">Apply</button>
         </div>
       </div>
     </div>
@@ -249,15 +249,6 @@
       }
 
     }
-
-    $(function () {
-      $('[data-toggle="popover"]').popover()
-    })
-
-    $('.popover-dismiss').popover({
-      trigger: 'focus'
-    })
-
   </script>
 
 {% endblock scripts %}
