--- a/jol_recipes/static/css/custom.css
+++ b/jol_recipes/static/css/custom.css
@@ -1,3 +1,8 @@
+* {
+    font-family: Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+    font-size: small;
+}
+
 tspan a {
     fill: #93c54b;
     /* Even for text, SVG uses fill over color */
@@ -8,8 +13,10 @@ tspan a {
 textarea {
     border: none;
     overflow: hidden;
-    width: auto;
-    resize: none; /*remove the resize handle on the bottom right*/
+    resize: none;
+    /*remove the resize handle on the bottom right*/
     background-color: transparent;
-    line-height: 19px
+    line-height: 19px;
+    max-width: 100%;
+    text-size-adjust: none;
 }
