--- a/jol_recipes/templates/recipe.html
+++ b/jol_recipes/templates/recipe.html
@@ -138,7 +138,7 @@
               </ul>
           </div>
           <div class="col-lg-4 col-md-6 mt-2">
-            <h5 class="mt-2">More Specialised</h5>
+            <h5 class="mt-2">Specialised</h5>
             <ul class="list-group">
                 {% if recipe['equipment_special'] %}
                   {% for item in recipe['equipment_special'] %}  
